--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /******************************************************************
 Theme Name: Steve's SLF4
-Theme URI: 
+Theme URI: http:/stevenloyer.com
 Description: A pretty much empty theme with Foundation
 Author: Steven Loyer
 Author URI: 
